--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -8,11 +8,16 @@ tasks:
     cmds:
       - go install go.uber.org/mock/mockgen@latest
       - go install honnef.co/go/tools/cmd/staticcheck@latest
+      - go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+      - go install connectrpc.com/connect/cmd/protoc-gen-connect-go@latest
   test:
     cmd: go test ./...
   lint:
     cmds:
       - go vet ./...
       - staticcheck ./...
+      - buf lint
   generate:
-    cmd: go generate ./...
+    cmds:
+      - go generate ./...
+      - buf generate
