--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,8 @@ on: [ push, pull_request ]
 jobs:
   ci:
     runs-on: ubuntu-latest
+    needs:
+      - buf
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
@@ -16,3 +18,11 @@ jobs:
           staticcheck ./...
       - name: "Run tests"
         run: go test ./...
+  buf:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: bufbuild/buf-setup-action@v1
+      - uses: bufbuild/buf-lint-action@v1
+        with:
+          input: proto
